force-app/main/default/objects/AuditLog_Config__mdt/AuditLog_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration settings for HMS Audit Logging to Datadog. Controls kill switch, endpoint, retry limits, alert email, and environment tag.</description>
    <label>Audit Log Config</label>
    <pluralLabel>Audit Log Configs</pluralLabel>
</CustomObject>