force-app/main/default/objects/AuditLog_Config__mdt/fields/Datadog_Endpoint_Path__c.field-meta.xml
<CustomField>
    <fullName>Datadog_Endpoint_Path__c</fullName>
    <label>Datadog Endpoint Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>