force-app/main/default/objects/AuditLog_Config__mdt/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>