force-app/main/default/objects/AuditLog_Config__mdt/fields/Is_Logging_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Logging_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Logging Enabled</label>
    <type>Checkbox</type>
</CustomField>