force-app/main/default/objects/AuditLog_Config__mdt/fields/Is_Login_Audit_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Login_Audit_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Login Audit Enabled</label>
    <type>Checkbox</type>
</CustomField>