force-app/main/default/objects/AuditLog_Config__mdt/fields/Is_Pii_Masking_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Pii_Masking_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>PII Masking Enabled</label>
    <type>Checkbox</type>
</CustomField>