force-app/main/default/objects/AuditLog_Config__mdt/fields/Retry_Max_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Retry_Max_Attempts__c</fullName>
    <label>Retry Max Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>